package baseline;
//filter for displaying items; all items, incomplete items, or completed items
public class Filter {

    void displayFilter(){
        //make booleans for all items, incomplete, and complete
        boolean allItems;
        boolean incomplete;
        boolean complete;
        //if it is all items, display the entire list
        //if it is incomplete, show only items marked as incomplete
        //if it is complete, show only items marked as complete
        //otherwise, the default is to just show everything
    }
}
