package baseline;

//this will be the class that modify tasks
public class Task {

    //adds new task to list
    void addTask(){
        //set read in values to a temp variable
        //check that the space is empty, move into the next empty spot
        //set the items in the empty slot
        //save
    }

    //modify the already existing item on the list
    void editTask(){
        //check to see if the spot is empty
        //save new data as a temp variable
        //replace old data with new data
        //save
    }

    //get rid of an item on the list
    void deleteTask() {
        //check to make sure there's something in that spot
        //free the data in the variable
        //set the variable to null
        //make sure that the variable is actually null
        //move the list values up
        //save
    }

    //sets all the data in the list to it's correct spots
    //max of 256 spots
    void initializeList(){
        //format date to yyyy-mm-dd here? or maybe in the tasks add tasks area
    }
}
