@startuml
'https://plantuml.com/class-diagram


class Application {
start()
main()
stop()
openFile()
handle()
saveFile()
}

Application <|-- Task
class Task {
addTask()
editTask()
deleteTask()
initializeList()
}
Application <|-- Filter
class Filter{
displayFilter()
}

Filter *-- displayFilter
displayFilter : boolean allItems
displayFilter : boolean incomplete
displayFilter : boolean complete

@enduml